Fixes invalid entry of new civs. Trims whitespace from firstname and lastname. Shows error message that names cannot contain strings.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -560,3 +560,9 @@ img::-moz-selection {
 .text-align-center {
   text-align: center;
 }
+
+.popover {
+  color: black;
+  width: 80%;
+
+}
